--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -4,7 +4,7 @@ services:
 ###> doctrine/doctrine-bundle ###
   database:
     ports:
-      - "5432"
+      - ${POSTGRES_PORT}
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/mailer ###
