refactor: corrected the database connection config, removed the extra description from env

--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -5,7 +5,7 @@ doctrine:
         port: '%env(POSTGRES_PORT)%'
         user: '%env(POSTGRES_USER)%'
         password: '%env(POSTGRES_PASSWORD)%'
-        driver: pdo_mysql
+        driver: pdo_pgsql
         server_version: 14
         charset: utf8
     orm:
