--- a/.env
+++ b/.env
@@ -1,14 +1,22 @@
+COMPOSE_PROJECT_NAME=goods-management-system
+COMPOSE_FILE=docker-compose.yml
+
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=a2695d04643a822b7cf3cb12e900ea35
 ###< symfony/framework-bundle ###
+
+DOCKER_UID=1000
+
+NGINX_PORT=80
+NGINX_SSL_PORT=443
 
 ###> symfony/webapp-pack ###
 MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/webapp-pack ###
 
 ###> doctrine/doctrine-bundle ###
-POSTGRES_HOST=localhost
+POSTGRES_HOST=db
 POSTGRES_USER=goods-management-system
 POSTGRES_PASSWORD=goods-management-system
 POSTGRES_DB=goods-management-system
@@ -25,3 +33,8 @@ POSTGRES_PORT=5432
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
 ###< symfony/mailer ###
+
+RABBITMQ_USER=goods-management-system
+RABBITMQ_PASSWORD=goods-management-system
+RABBITMQ_HOST=rabbitmq
+RABBITMQ_PORT=5672
