--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,11 +1,15 @@
-version: '3'
+version: '3.4'
 
 services:
-###> doctrine/doctrine-bundle ###
-  database:
-    ports:
-      - ${POSTGRES_PORT}:${POSTGRES_PORT}
-###< doctrine/doctrine-bundle ###
+  php:
+    user: ${DOCKER_UID}
+    restart: always
+    build:
+      context: ./docker
+      dockerfile: php-fpm/Dockerfile
+      target: php_fpm_dev
+    volumes:
+      - ./:/var/www/symfony:cached
 
 ###> symfony/mailer ###
   mailer:
