--- a/docker/nginx/templates/backend.conf.template
+++ b/docker/nginx/templates/backend.conf.template
@@ -21,6 +21,12 @@ server {
         try_files $uri /index.php?$query_string;
     }
 
+    location ^~ /coverage/ {
+        root /var/www/symfony;
+        index index.html;
+        try_files $uri $uri/ =404;
+    }
+
     location ~ ^/index\.php(/|$) {
         fastcgi_pass php:9000;
         fastcgi_split_path_info ^(.+\.php)(/.*)$;
